Add new update file

--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -22,39 +22,44 @@
 
   <!-- Main Content -->
   <main>
-    <!-- History Section -->
-    <section>
+    <!-- History Article -->
+    <article>
       <h2>History</h2>
       <p>TechCon began in 2010 as a small gathering of developers and has grown into one of the largest global
         technology conferences.</p>
-    </section>
+      <img src="images/history.jpg" alt="Historic photo of early TechCon event">
+    </article>
 
-    <!-- Mission Section -->
-    <section>
+    <!-- Mission Article -->
+    <article>
       <h2>Mission</h2>
       <p>Our mission is to inspire innovation, foster collaboration, and empower the next generation of tech leaders.
       </p>
-    </section>
+      <img src="images/mission.jpg" alt="Motivational icon representing innovation">
+    </article>
 
-    <!-- Speakers Section -->
-    <section>
-      <h2>Notable Speakers</h2>
+    <!-- Past Speakers Article -->
+    <article>
+      <h2>Past Speakers</h2>
 
-      <article>
+      <section>
         <h3>Dr. Ada Lovelace</h3>
         <p>Pioneer in computing, sharing insights on the future of AI.</p>
-      </article>
+        <img src="images/ada.jpg" alt="Photo of Dr. Ada Lovelace">
+      </section>
 
-      <article>
+      <section>
         <h3>Elon Turing</h3>
         <p>Visionary entrepreneur discussing breakthroughs in robotics and space technology.</p>
-      </article>
+        <img src="images/elon.jpg" alt="Photo of Elon Turing">
+      </section>
 
-      <article>
+      <section>
         <h3>Grace Hopper</h3>
         <p>Legendary computer scientist highlighting the importance of coding education.</p>
-      </article>
-    </section>
+        <img src="images/grace.jpg" alt="Photo of Grace Hopper">
+      </section>
+    </article>
   </main>
 
   <!-- Footer -->
