--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -23,23 +23,32 @@
   <!-- Main Content -->
   <main>
     <section>
-      <h2>Sign Up</h2>
+      <h2>Sign Up Form</h2>
       <form action="#" method="post">
+        <!-- Name Field -->
         <label for="name">Full Name:</label><br>
         <input type="text" id="name" name="name" required><br><br>
 
+        <!-- Email Field -->
         <label for="email">Email Address:</label><br>
         <input type="email" id="email" name="email" required><br><br>
 
+        <!-- Password Field -->
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required><br><br>
 
+        <!-- Confirm Password Field -->
+        <label for="confirm-password">Confirm Password:</label><br>
+        <input type="password" id="confirm-password" name="confirm-password" required><br><br>
+
+        <!-- Terms and Conditions -->
         <label>
           <input type="checkbox" name="terms" required>
           I agree to the terms and conditions
         </label><br><br>
 
-        <button type="submit">Register</button>
+        <!-- Submit Button -->
+        <button type="submit">Register Now</button>
       </form>
     </section>
   </main>
@@ -49,4 +58,5 @@
     <p>Copyright &copy; 2024 TechCon Conference</p>
   </footer>
 </body>
+
 </html>
