--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -9,7 +9,7 @@
 <body>
   <!-- Header -->
   <header>
-    <h1>TechCon 2024 Schedule</h1>
+    <h1>Schedule for TechCon 2024</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -23,38 +23,39 @@
   <!-- Main Content -->
   <main>
     <section>
-      <h2>Conference Events</h2>
+      <h2>Conference Timetable</h2>
       <table border="1" cellpadding="10">
+        <caption>Detailed Schedule of Events for TechCon 2024</caption>
         <thead>
           <tr>
-            <th>Day</th>
-            <th>Time</th>
-            <th>Event</th>
-            <th>Speaker</th>
+            <th scope="col">Time</th>
+            <th scope="col">Session</th>
+            <th scope="col">Speaker</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Day 1</td>
             <td>09:00 AM</td>
             <td>Opening Keynote</td>
             <td>Dr. Ada Lovelace</td>
           </tr>
           <tr>
-            <td>Day 1</td>
             <td>11:00 AM</td>
             <td>AI Innovations</td>
             <td>Elon Turing</td>
           </tr>
           <tr>
-            <td>Day 2</td>
-            <td>10:00 AM</td>
+            <td>01:00 PM</td>
+            <td>Lunch & Networking</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>02:00 PM</td>
             <td>Future of Coding</td>
             <td>Grace Hopper</td>
           </tr>
           <tr>
-            <td>Day 2</td>
-            <td>02:00 PM</td>
+            <td>04:00 PM</td>
             <td>Robotics Workshop</td>
             <td>Alan Robotics</td>
           </tr>
@@ -68,4 +69,5 @@
     <p>Copyright &copy; 2024 TechCon Conference</p>
   </footer>
 </body>
+
 </html>
