--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -3,13 +3,69 @@
 
 <head>
   <meta charset="utf-8">
-  <title>TechCon 2024 - Contact</title>
+  <title>TechCon 2024 - Contact Us</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+
+    header {
+      background: #333;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    nav {
+      background: #f4f4f4;
+      padding: 10px;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+
+    main {
+      padding: 20px;
+    }
+
+    section {
+      margin-bottom: 20px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: 0;
+    }
+
+    footer {
+      background: #333;
+      color: #fff;
+      text-align: center;
+      padding: 10px;
+    }
+  </style>
 </head>
 
 <body>
   <!-- Header -->
   <header>
-    <h1>Contact TechCon 2024</h1>
+    <h1>Contact Us</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -22,9 +78,10 @@
 
   <!-- Main Content -->
   <main>
+    <!-- Contact Information -->
     <section>
       <h2>Get in Touch</h2>
-      <p>Email us at: <a href="mailto:info@techcon2024.com">info@techcon2024.com</a></p>
+      <p>Email us at: <a href="mailto:email@example.com">email@example.com</a></p>
       <p>
         <a href="https://www.linkedin.com/company/techcon2024" target="_blank">LinkedIn</a> |
         <a href="https://twitter.com/techcon2024" target="_blank">Twitter</a> |
@@ -35,15 +92,15 @@
     <!-- Embedded Map -->
     <section>
       <h2>Conference Location</h2>
-      <iframe 
+      <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3168.953!2d-122.084!3d37.422!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb0b123456789%3A0xabcdef123456789!2sTechCon%20Venue!5e0!3m2!1sen!2sus!4v1234567890"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+        allowfullscreen="" loading="lazy">
       </iframe>
     </section>
 
     <!-- Contact Form -->
     <section>
-      <h2>Contact Us</h2>
+      <h2>Contact Us Form</h2>
       <form action="#" method="post">
         <label for="name">Your Name:</label><br>
         <input type="text" id="name" name="name" required><br><br>
@@ -64,4 +121,5 @@
     <p>Copyright &copy; 2024 TechCon Conference</p>
   </footer>
 </body>
+
 </html>
