--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -24,7 +24,7 @@
   <main>
     <section>
       <h2>Conference Timetable</h2>
-      <table border="1" cellpadding="10">
+      <table>
         <caption>Detailed Schedule of Events for TechCon 2024</caption>
         <thead>
           <tr>
@@ -69,5 +69,5 @@
     <p>Copyright &copy; 2024 TechCon Conference</p>
   </footer>
 </body>
-</html>
 
+</html>
