--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -66,7 +66,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>Copyright &copy; 2024 TechCon Conference</p>
+    <p>Copyright 2024 TechCon Conference</p>
   </footer>
 </body>
 
